--- a/arch/arm64/configs/a10_defconfig
+++ b/arch/arm64/configs/a10_defconfig
@@ -1969,9 +1969,9 @@ CONFIG_HW_RANDOM=y
 # CONFIG_HW_RANDOM_TIMERIOMEM is not set
 # CONFIG_HW_RANDOM_EXYNOS is not set
 CONFIG_HW_RANDOM_EXYNOS_SWD=y
-CONFIG_EXYRNG_FIPS_COMPLIANCE=y
+# CONFIG_EXYRNG_FIPS_COMPLIANCE is not set
 # CONFIG_EXYRNG_FAIL_POLICY_DISABLE is not set
-CONFIG_EXYRNG_FAIL_POLICY_RESET=y
+# CONFIG_EXYRNG_FAIL_POLICY_RESET is not set
 CONFIG_EXYRNG_USE_CRYPTOMANAGER=y
 # CONFIG_R3964 is not set
 
@@ -5248,6 +5248,7 @@ CONFIG_CRYPTO_JITTERENTROPY=y
 # CONFIG_CRYPTO_USER_API_RNG is not set
 # CONFIG_CRYPTO_USER_API_AEAD is not set
 CONFIG_CRYPTO_HASH_INFO=y
+# CONFIG_CRYPTO_FIPS is not set
 CONFIG_CRYPTO_HW=y
 # CONFIG_CRYPTO_DEV_S5P is not set
 # CONFIG_CRYPTO_DEV_CCP is not set
