--- a/arch/arm64/configs/a10_defconfig
+++ b/arch/arm64/configs/a10_defconfig
@@ -2845,7 +2845,7 @@ CONFIG_MALI_REAL_HW=y
 # CONFIG_MALI_DMA_BUF_MAP_ON_DEMAND is not set
 # CONFIG_MALI_DMA_BUF_LEGACY_COMPAT is not set
 # CONFIG_MALI_SEC_VK_BOOST is not set
-CONFIG_MALI_KUTF=m
+# CONFIG_MALI_KUTF is not set
 # CONFIG_MALI_ARBITER_SUPPORT is not set
 # CONFIG_MALI_GEM5_BUILD is not set
 # CONFIG_MALI_EXYNOS_SECURE_RENDERING_LEGACY is not set
@@ -4625,7 +4625,7 @@ CONFIG_FIVE_USE_TZDEV=y
 # CONFIG_FIVE_EARLY_LOAD_TRUSTED_APP is not set
 CONFIG_ICD=y
 CONFIG_ICD_USE_TZDEV=y
-CONFIG_GATOR=m
+# CONFIG_GATOR is not set
 # CONFIG_GATOR_DO_NOT_ONLINE_CORES_AT_STARTUP is not set
 CONFIG_TZIC=y
 CONFIG_TZIC_USE_TZDEV=y
