--- a/arch/arm64/configs/a10_defconfig
+++ b/arch/arm64/configs/a10_defconfig
@@ -5078,7 +5078,7 @@ CONFIG_SECURITY_DSMS=y
 # CONFIG_GAF_V3 is not set
 # CONFIG_GAF_V4 is not set
 # CONFIG_GAF_V5 is not set
-CONFIG_GAF_V6=y
+# CONFIG_GAF_V6 is not set
 CONFIG_DEFAULT_SECURITY_SELINUX=y
 # CONFIG_DEFAULT_SECURITY_DAC is not set
 CONFIG_DEFAULT_SECURITY="selinux"
